# skiller

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  handles.txt  prompts-lock.json  prompts.json  pyproject.toml  test_twitter_api_data_validation.py
app/: __init__.py  main.py  os.py
app/agents/: advanced_skill_generator_workflow.py  expertise_extraction_agent.py  monitored_advanced_skill_generator_workflow.py  orchestrator.py  scrapebadger_collector.py  skill_generator.py  twitter_api_collector.py  x_scraper.py
config/: auto_configured_development.yaml  development_config.yaml  production_config.yaml  staging_config.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RESOURCE_MONITORING.md
examples/: advanced_workflow_demo.py  analysis_dataclasses_demo.py  enhanced_skill_profile_demo.py  enhanced_workflow_demo.py  resource_monitoring_demo.py  workflow_monitoring_demo.py
prompts/: scrapebadger_data_collection.yaml  session_coordinator.prompt.yaml  skill_orchestrator.prompt.yaml  twitter_api_data_collection.yaml  x_following_finder.prompt.yaml  x_post_analyzer.prompt.yaml
scripts/: validate_resources.py
tests/: conftest.py  test_advanced_skill_generator_workflow.py  test_analysis.py  test_collected_data.py  test_enhanced_skill_profile.py  test_enhanced_workflow_validation.py  test_handles.txt  test_network_connectivity_rate_limiting.py  test_parallel_data_collection.py  test_resource_monitoring.py  test_session_workflow.py  test_skill_orchestrator_team.py  test_web_search_toolkit.py  test_workflow_monitoring.py  test_workflow_validation.py
(+40 files in other folders)
