[project]
name = "skiller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.0",
    "chonkie[semantic]>=1.5.2",
    "firecrawl-py>=4.13.0",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "lancedb>=0.26.1",
    "langwatch>=0.9.0",
    "mistralai>=1.10.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pylance>=1.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "supermemory>=3.18.0",
    "tantivy>=0.25.1",
    "tweepy>=4.16.0",
    "typer>=0.21.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.yaml", "prompts/.materialized/*"]

[project.scripts]
skiller = "app.main:app"
